--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,8 +1,8 @@
-group 'com.example.mcumgr_flutter'
+group 'no.nordicsemi.android.mcumgr_flutter'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.3.50'
+    ext.kotlin_version = '1.4.31'
     repositories {
         google()
         jcenter()
