--- a/android/build.gradle
+++ b/android/build.gradle
@@ -25,13 +25,14 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 30
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
     defaultConfig {
-        minSdkVersion 16
+        minSdkVersion 19
+        targetSdkVersion 30
     }
     lintOptions {
         disable 'InvalidPackage'
@@ -39,5 +40,6 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'io.runtime.mcumgr:mcumgr-ble:0.11.0'
+    implementation  'com.google.protobuf:protobuf-javalite:3.11.0'
 }
