--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -6,9 +6,10 @@ description: Demonstrates how to use the mcumgr_flutter plugin.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  flutter_blue: ^0.8.0
   flutter:
     sdk: flutter
 
