--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -29,6 +29,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+# dependency_overrides:
+#   flutter_blue:
+#     path: ../../flutter_blue/
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
