added unzip and decode manifest.json

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,17 +1,17 @@
 name: mcumgr_flutter
 description: A new flutter plugin project.
 version: 0.0.1+1
-homepage:
+homepage: null
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
   flutter: ">=2.0.0"
 
 dependencies:
-  protobuf: ^2.0.0
-  rxdart: ^0.26.0
   flutter:
     sdk: flutter
+  protobuf: ^2.0.0
+  rxdart: ^0.26.0
 
 dev_dependencies:
   faker: ^2.0.0
@@ -20,7 +20,6 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
   # This section identifies this Flutter project as a plugin project.
@@ -34,7 +33,6 @@ flutter:
         pluginClass: McumgrFlutterPlugin
       ios:
         pluginClass: McumgrFlutterPlugin
-
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
@@ -45,7 +43,6 @@ flutter:
   #
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # To add custom fonts to your plugin package, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
