--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -11,6 +11,10 @@ environment:
 dependencies:
   flutter_blue: ^0.8.0
   path: ^1.8.0
+  flutter_archive: ^4.0.1
+  path_provider: ^2.0.5
+  uuid: ^3.0.4
+  json_serializable: ^5.0.2
   flutter:
     sdk: flutter
 
@@ -29,6 +33,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.1.2
 
 # dependency_overrides:
 #   flutter_blue:
