--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,14 +2,14 @@ group 'no.nordicsemi.android.mcumgr_flutter'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.4.31'
+    ext.kotlin_version = '1.6.0'
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.2'
+        classpath 'com.android.tools.build:gradle:7.0.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -17,7 +17,7 @@ buildscript {
 rootProject.allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
@@ -40,6 +40,6 @@ android {
 }
 
 dependencies {
-    implementation 'io.runtime.mcumgr:mcumgr-ble:0.11.0' // TODO: Update to 0.12.0
-    implementation  'com.google.protobuf:protobuf-javalite:3.11.0'
+    implementation 'no.nordicsemi.android:mcumgr-ble:0.13.0-beta08'
+    implementation  'com.google.protobuf:protobuf-javalite:3.11.4'
 }
