--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -30,7 +30,7 @@ flutter_ios_podfile_setup
 target 'Runner' do
   use_frameworks!
   use_modular_headers!
-  pod 'McuManager', :git => 'https://github.com/NickKibish/IOS-nRF-Connect-Device-Manager.git'
+  pod 'McuManager', :git => 'https://github.com/dinesharjani/mcumgr-ios.git', :branch => 'always-upload-image-zero-fix'
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
 
