--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  platform: ^3.1.0
   flutter_blue: ^0.8.0
   path: ^1.8.0
   flutter_archive: ^4.0.1
