Migrating sample project to build tools 7.1.3 and Kotlin 1.6.21

--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -32,7 +32,7 @@ android {
         main.java.srcDirs += 'src/main/kotlin'
     }
 
-    lintOptions {
+    lint {
         disable 'InvalidPackage'
     }
 
