Updated McuMgr version to 1.3 Updated flutter to 3.x Updated the library to use set of images

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "CBOR",
         "Protobuf"
     ],
-    "C_Cpp.default.configurationProvider": "nrf-connect"
+    "C_Cpp.default.configurationProvider": "nrf-connect",
+    "nrf-connect.toolchain.path": "${nrf-connect.toolchain:1.9.1}"
 }
