--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: mcumgr_flutter
 description: A new flutter plugin project.
-version: 0.0.1+1
-homepage: null
+version: 0.9.0+1
+homepage: "https://docs.flutter.dev/development/tools/sdk/upgrading"
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   protobuf: ^2.0.0
   rxdart: ^0.26.0
+  tuple: ^2.0.0
 
 dev_dependencies:
   faker: ^2.0.0
