updated ios project. added new parameter to update method.

--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -52,6 +52,7 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+    namespace 'no.nordicsemi.android.example.mcumgr_flutter'
 }
 
 flutter {
