--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,15 +2,16 @@ group 'no.nordicsemi.android.mcumgr_flutter'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.6.21'
+    ext.kotlin_version = '1.8.10'
     repositories {
         google()
         mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.4'
+        classpath 'com.android.tools.build:gradle:7.4.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.squareup.wire:wire-gradle-plugin:4.5.2'
     }
 }
 
@@ -23,23 +24,31 @@ rootProject.allprojects {
 
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+apply plugin: 'com.squareup.wire'
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 33
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
     defaultConfig {
         minSdkVersion 19
-        targetSdkVersion 30
+        targetSdkVersion 33
     }
     lintOptions {
         disable 'InvalidPackage'
     }
 }
 
+wire {
+    sourcePath {
+        srcDir '../lib/proto'
+    }
+    kotlin {}
+}
+
 dependencies {
-    implementation 'no.nordicsemi.android:mcumgr-ble:1.3.1'
+    implementation 'no.nordicsemi.android:mcumgr-ble:1.6.0'
     implementation  'com.google.protobuf:protobuf-kotlin-lite:3.21.1'
 }
