--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   fixnum: ^1.1.0
   flutter:
     sdk: flutter
+  flutter_blue_plus: ^1.5.2
   protobuf: ^2.1.0
   rxdart: ^0.27.7
   tuple: ^2.0.1
