--- a/android/build.gradle
+++ b/android/build.gradle
@@ -28,14 +28,14 @@ apply plugin: 'com.squareup.wire'
 
 android {
     namespace 'no.nordicsemi.android.mcumgr_flutter'
-    compileSdkVersion 34
+    compileSdk 33
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
     defaultConfig {
-        minSdkVersion 19
-        targetSdkVersion 34
+        minSdk 19
+        targetSdk 33
     }
     lintOptions {
         disable 'InvalidPackage'
