--- a/example/android/.settings/org.eclipse.buildship.core.prefs
+++ b/example/android/.settings/org.eclipse.buildship.core.prefs
@@ -5,7 +5,7 @@ connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
 connection.project.dir=
 eclipse.preferences.version=1
 gradle.user.home=
-java.home=/Applications/Android Studio.app/Contents/jbr/Contents/Home
+java.home=/Library/Internet Plug-Ins/JavaAppletPlugin.plugin/Contents/Home
 jvm.arguments=
 offline.mode=false
 override.workspace.settings=true
