--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,24 +1,25 @@
 name: mcumgr_flutter_example
 description: Demonstrates how to use the mcumgr_flutter plugin.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  uuid: ^4.2.1
-  json_serializable: ^6.7.1
-  provider: ^6.1.1
   flutter:
     sdk: flutter
-
+  http: ^1.1.2
+  json_annotation: ^4.8.1
   mcumgr_flutter:
     path: ../
+  provider: ^6.1.1
+  uuid: ^4.2.1
 
 dev_dependencies:
+  build_runner: ^2.1.2
+  json_serializable: ^6.7.1
   flutter_test:
     sdk: flutter
-  build_runner: ^2.1.2
 
 flutter:
   uses-material-design: true
