--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -3,9 +3,10 @@ description: Demonstrates how to use the mcumgr_flutter plugin.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
+  bloc: ^8.1.2
   flutter:
     sdk: flutter
   flutter_blue_plus: ^1.30.6
