--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -6,9 +6,9 @@ environment:
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
-  bloc: ^8.1.2
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.3
   flutter_blue_plus: ^1.30.6
   http: ^1.1.2
   json_annotation: ^4.8.1
