--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -9,12 +9,14 @@ dependencies:
   equatable: ^2.0.5
   flutter:
     sdk: flutter
+  flutter_archive: ^6.0.0
   flutter_bloc: ^8.1.3
   flutter_blue_plus: ^1.30.6
   http: ^1.1.2
   json_annotation: ^4.8.1
   mcumgr_flutter:
     path: ../
+  path_provider: ^2.1.1
   provider: ^6.1.1
   uuid: ^4.2.1
 
