--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -18,13 +18,15 @@ dependencies:
     path: ../
   path_provider: ^2.1.1
   provider: ^6.1.1
+  rxdart: ^0.27.7
+  tuple: ^2.0.2
   uuid: ^4.2.1
 
 dev_dependencies:
   build_runner: ^2.1.2
-  json_serializable: ^6.7.1
   flutter_test:
     sdk: flutter
+  json_serializable: ^6.7.1
 
 flutter:
   uses-material-design: true
