--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ version: 0.4.2
 homepage: "https://github.com/NordicSemiconductor/Flutter-nRF-Connect-Device-Manager"
 
 environment:
-  sdk: '>=2.12.0 <4.0.0'
+  sdk: ">=2.12.0 <4.0.0"
   flutter: ">=2.0.0"
 
 dependencies:
@@ -13,7 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   protobuf: ^3.1.0
-  rxdart: ^0.27.7
+  rxdart: ^0.28.0
   tuple: ^2.0.1
 
 dev_dependencies:
