--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -6,28 +6,29 @@ environment:
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
-  equatable: ^2.0.5
-  file_picker: ^6.1.1
+  cbor: ^6.3.7
+  equatable: ^2.0.7
+  file_picker: ^10.2.1
   flutter:
     sdk: flutter
-  flutter_archive: ^6.0.0
-  flutter_bloc: ^8.1.3
-  flutter_blue_plus: ^1.30.6
+  flutter_archive: ^6.0.3
+  flutter_bloc: ^9.1.1
+  flutter_blue_plus: ^1.35.5
   http: ^1.1.2
-  json_annotation: ^4.8.1
+  json_annotation: ^4.9.0
   mcumgr_flutter:
     path: ../
-  path_provider: ^2.1.1
-  provider: ^6.1.1
+  path_provider: ^2.1.5
+  provider: ^6.1.5
   rxdart: ^0.28.0
   tuple: ^2.0.2
-  uuid: ^4.2.1
+  uuid: ^4.5.1
 
 dev_dependencies:
-  build_runner: ^2.1.2
+  build_runner: ^2.6.0
   flutter_test:
     sdk: flutter
-  json_serializable: ^6.7.1
+  json_serializable: ^6.10.0
 
 flutter:
   uses-material-design: true
