--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,8 +5,8 @@ version: 0.4.2
 homepage: "https://github.com/NordicSemiconductor/Flutter-nRF-Connect-Device-Manager"
 
 environment:
-  sdk: ">=2.12.0 <4.0.0"
-  flutter: ">=2.0.0"
+  sdk: ">=3.7.0 <4.0.0"
+  flutter: ">=3.0.0"
 
 dependencies:
   fixnum: ^1.1.0
@@ -15,6 +15,7 @@ dependencies:
   protobuf: ^3.1.0
   rxdart: ^0.28.0
   tuple: ^2.0.1
+  cbor: ^6.3.7
 
 dev_dependencies:
   faker: ^2.1.0
