--- a/android/build.gradle
+++ b/android/build.gradle
@@ -60,4 +60,6 @@ wire {
 dependencies {
     implementation 'no.nordicsemi.android:mcumgr-ble:2.6.0'
     implementation  'com.google.protobuf:protobuf-kotlin-lite:4.31.1'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.20.0'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.20'
 }
