--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -7,27 +7,27 @@ environment:
 
 dependencies:
   equatable: ^2.0.5
-  file_picker: ^10.1.9
+  file_picker: ^10.3.3
   flutter:
     sdk: flutter
-  flutter_archive: ^6.0.0
-  flutter_bloc: ^8.1.3
-  flutter_blue_plus: ^1.30.6
-  http: ^1.1.2
-  json_annotation: ^4.8.1
+  archive: ^4.0.7
+  flutter_bloc: ^8.1.6
+  flutter_blue_plus: ^1.36.6
+  http: ^1.5.0
+  json_annotation: ^4.9.0
   mcumgr_flutter:
     path: ../
   path_provider: ^2.1.1
-  provider: ^6.1.1
+  provider: ^6.1.5+1
   rxdart: ^0.28.0
   tuple: ^2.0.2
   uuid: ^4.2.1
 
 dev_dependencies:
-  build_runner: ^2.1.2
+  build_runner: ^2.8.0
   flutter_test:
     sdk: flutter
-  json_serializable: ^6.7.1
+  json_serializable: ^6.11.1
 
 flutter:
   uses-material-design: true
