--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,7 @@ homepage: "https://github.com/NordicSemiconductor/Flutter-nRF-Connect-Device-Man
 
 environment:
   sdk: ^3.7.2
+  flutter: ^1.10.0
 
 dependencies:
   fixnum: ^1.1.0
